feat(aichat): enhanced ai chat with timestamp, visual errors, and specific tool-call collapsible messages

--- a/src/SmartHopper.Core/AI/Chat/Resources/templates/message-template.html
+++ b/src/SmartHopper.Core/AI/Chat/Resources/templates/message-template.html
@@ -1,6 +1,12 @@
 <div class='message {{role}}'>
     <div>
-        <div class='message-sender'>{{displayName}}</div>
-        <div class='message-content'>{{content}}</div>
+        <div class='message-header'>
+            <span class='message-sender'>{{displayName}}</span>
+            <span class='message-timestamp'>{{timestamp}}</span>
+        </div>
+        <div class='message-content'>
+            {{content}}
+            <span class='toggle-arrow'></span>
+        </div>
     </div>
 </div>
