feat(aichat): enhanced ai chat with inlinne metrics per message

--- a/src/SmartHopper.Core/AI/Chat/Resources/templates/message-template.html
+++ b/src/SmartHopper.Core/AI/Chat/Resources/templates/message-template.html
@@ -8,5 +8,8 @@
             {{content}}
             <span class='toggle-arrow'></span>
         </div>
+        <div class='message-footer'>
+            <span class='metrics-icon' data-in="{{inTokens}}" data-out="{{outTokens}}" data-provider="{{provider}}" data-model="{{model}}" data-reason="{{finishReason}}">📈</span>
+        </div>
     </div>
 </div>
