--- a/src/SmartHopper.Core/AI/Chat/Resources/templates/message-template.html
+++ b/src/SmartHopper.Core/AI/Chat/Resources/templates/message-template.html
@@ -4,10 +4,10 @@
             <span class='message-sender'>{{displayName}}</span>
             <span class='message-timestamp'>{{timestamp}}</span>
         </div>
-        <div class='message-content'>
-            {{content}}
-            <span class='toggle-arrow'></span>
+        <div class='message-content' data-copy-content='{{displayName}} ({{timestamp}}): {{mdContent}}'>
+            {{htmlContent}}
         </div>
+        <span class='toggle-arrow'></span>
         <div class='message-footer'>
             <span class='metrics-icon' data-in="{{inTokens}}" data-out="{{outTokens}}" data-provider="{{provider}}" data-model="{{model}}" data-reason="{{finishReason}}">📈</span>
         </div>
