--- a/src/SmartHopper.Core/AI/Chat/Resources/templates/chat-template.html
+++ b/src/SmartHopper.Core/AI/Chat/Resources/templates/chat-template.html
@@ -7,6 +7,13 @@
     <style type="text/css">
         {{cssChat}}
     </style>
+    <script>
+        window.MathJax = {
+            tex: { inlineMath: [['\\(', '\\)'], ['$', '$']] },
+            svg: { fontCache: 'global' }
+        };
+    </script>
+    <script src="js/mathjax/tex-mml-chtml.js"></script>
 </head>
 <body>
     <div id='chat-container'></div>
