--- a/src/SmartHopper.Core/UI/Chat/Resources/templates/message-template.html
+++ b/src/SmartHopper.Core/UI/Chat/Resources/templates/message-template.html
@@ -9,7 +9,7 @@
         </div>
         <span class='toggle-arrow'></span>
         <div class='message-footer'>
-            <span class='metrics-icon' data-in="{{inTokens}}" data-out="{{outTokens}}" data-provider="{{provider}}" data-model="{{model}}" data-reason="{{finishReason}}">📈</span>
+            <span class='metrics-icon {{metricsClass}}' data-in="{{inTokens}}" data-out="{{outTokens}}" data-provider="{{provider}}" data-model="{{model}}" data-reason="{{finishReason}}">📈</span>
         </div>
     </div>
 </div>
