--- a/src/SmartHopper.Core/UI/Chat/Resources/templates/message-template.html
+++ b/src/SmartHopper.Core/UI/Chat/Resources/templates/message-template.html
@@ -7,7 +7,7 @@
         <div class='message-content' data-copy-content='{{displayName}} ({{timestamp}}): {{mdContent}}'>
             {{htmlContent}}
         </div>
-        <span class='toggle-arrow'></span>
+        <span class='toggle-arrow' role='button' tabindex='0' aria-expanded='false' aria-label='Toggle details'></span>
         <div class='message-footer'>
             <span class='metrics-icon {{metricsClass}}' data-in="{{inTokens}}" data-out="{{outTokens}}" data-provider="{{provider}}" data-model="{{model}}" data-reason="{{finishReason}}">📈</span>
         </div>
