--- a/src/SmartHopper.Core/UI/Chat/Resources/templates/message-template.html
+++ b/src/SmartHopper.Core/UI/Chat/Resources/templates/message-template.html
@@ -2,12 +2,14 @@
     <div>
         <div class='message-header'>
             <span class='message-sender'>{{displayName}}</span>
-            <span class='message-timestamp'>{{timestamp}}</span>
+            <span class='message-actions'>
+                <span class='message-timestamp'>{{timestamp}}</span>
+                <button class='toggle-arrow' type='button' aria-expanded='false' aria-label='Toggle details'></button>
+            </span>
         </div>
         <div class='message-content' data-copy-content='{{displayName}} ({{timestamp}}): {{mdContent}}'>
             {{htmlContent}}
         </div>
-        <span class='toggle-arrow' role='button' tabindex='0' aria-expanded='false' aria-label='Toggle details'></span>
         <div class='message-footer'>
             <span class='metrics-icon {{metricsClass}}' data-in="{{inTokens}}" data-out="{{outTokens}}" data-provider="{{provider}}" data-model="{{model}}" data-reason="{{finishReason}}">📈</span>
         </div>
